Grammar/Exercise_1/Intermediate_Grammar_Forms/Grammar_With_Regex_0.txt
S -> SourceFile
SourceFile -> PackageDeclaration ImportDeclaration Body
Body -> TopLevelDeclaration MainFunc TopLevelDeclaration
PackageDeclaration -> ^package$ Identifier [;]
ImportDeclaration -> epsilon
TopLevelDeclaration -> epsilon
MainFunc -> ^func$ ^main$ [(] [)] [{] Code [}]
Code -> epsilon
Identifier -> [_a-zA-Z][_a-zA-Z0-9]*
